--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
-*{
-  display: block;
-}
+ div{
+    background-color: aquamarine;
+    width: 300px;
+    margin-bottom: 10px;
+ }
  
  
  
+ 
+ 
+ 
+ 
+
  
